Added version definition

--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
         "name": "KaMeHb-UA",
         "email": "marlock@etlgr.com",
         "url": "https://t.me/KaMeHb_UA"
-    }
+    },
+    "version": "0.5.1"
 }
