--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
         "email": "marlock@etlgr.com",
         "url": "https://t.me/KaMeHb_UA"
     },
-    "version": "0.5.1"
+    "version": "0.5.2",
+    "dependencies": {
+        "@types/dom-next": "https://github.com/FavoriStyle/DOMNext.git#types"
+    }
 }
